--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -101,7 +101,7 @@ stages:
             parameters:
               directory: ${{ definition.value.path }}
               buildImage: ${{ definition.value.buildImage }}
-              repoName: ${{ coalesce(definition.value.repoName, definition.key) }}
+              repoName: ${{ coalesce(definition.value.name, definition.key) }}
               
         - ${{ if and(ne(definition.value.packageAs, 'image'), not(endsWith(definition.value.buildImage, 'Dockerfile'))) }}:
           - job: Validate_${{ definition.key }}
@@ -128,7 +128,7 @@ stages:
           ${{ if ne(parameters.buildDirectories, '') }}:
             dependsOn: 
             - ${{ each definition in parameters.buildDirectories }}:
-              - Build_${{ definition.key }}
+              - Build_${{ coalesce(replace(definition.value.name, '-', '_'), definition.key) }}
           ${{ if in(parameters.deployType, 'ADO') }}:
             env:
               AZDO_PERSONAL_ACCESS_TOKEN: '$(AZDO_PERSONAL_ACCESS_TOKEN)'
@@ -168,7 +168,7 @@ stages:
             parameters:
               directory: ${{ definition.value.path }}
               buildImage: ${{ definition.value.buildImage }}
-              repoName: ${{ coalesce(definition.value.repoName, definition.key) }}
+              repoName: ${{ coalesce(definition.value.name, definition.key) }}
               
         - ${{ if and(ne(definition.value.packageAs, 'image'), not(endsWith(definition.value.buildImage, 'Dockerfile'))) }}:
           - job: Build_${{ definition.key }}
