--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -184,8 +184,11 @@ stages:
     - ${{ if in(parameters.deployType, 'ReactApp') }}:
       - deployment: DeployArtifacts
         displayName: Deploy ${{ parameters.deployType }}
-        dependsOn: BuildSources
-        condition: succeeded('BuildSources')
+        dependsOn: 
+        - BuildSources
+        - Terraform
+        - PublishTFOutputs
+        condition: and(succeeded('BuildSources'), or(succeeded('Terraform'), succeeded('PublishTFOutputs')))
         environment: $(ENVIRONMENT_NAME)
         strategy:
           runOnce:
