--- a/ReactApp/build.yml
+++ b/ReactApp/build.yml
@@ -23,6 +23,12 @@ steps:
       yarn | $(Agent.OS)
       yarn
 
+- task: npmAuthenticate@0
+  displayName: Authenticate NPM
+  condition: ne(variables.CACHE_RESTORED, 'true')
+  inputs:
+    workingFile: .npmrc
+
 - script: yarn --frozen-lockfile
   displayName: Install Dependencies
   condition: ne(variables.CACHE_RESTORED, 'true')
