Add ReactAppEB deploy type

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -25,6 +25,7 @@ parameters:
   - 'null'
   - ADO
   - ReactApp
+  - ReactAppEB
 # set terraform output variables to environment variables
 - name: terraformOutputEnv
   type: object
