--- a/ReactAppEB/deploy.yml
+++ b/ReactAppEB/deploy.yml
@@ -12,7 +12,7 @@ steps:
 - template: ../Terraform/output-map.yml
   parameters: 
     terraformOutputEnv: 
-      S3_BUCKET_NAME: eb_bundle_bucket
+      S3_BUCKET_NAME: reactapp
 
 # - download: current
 #   artifact: react-app-$(ENVIRONMENT_NAME)
