Add new ReactEB deploy type. Add link to new ReactEB deploy yaml. Create folder for ReactEB deploy type and create validate, build , deploy yaml. ReactEB deploy step  auths to npm, zips code base to create EB app bundle, syncs the ap bundle to S3, creates app version using app bundle on EB instance, deploys the new app bundle.

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -25,6 +25,7 @@ parameters:
   - 'null'
   - ADO
   - ReactApp
+  - ReactAppEB
 # set terraform output variables to environment variables
 - name: terraformOutputEnv
   type: object
@@ -193,6 +194,23 @@ stages:
         strategy:
           runOnce:
             deploy:  
+              steps:
+              - template: ${{ parameters.deployType }}/deploy.yml
+                ${{ if ne(parameters.terraformOutputEnv, '') }}:
+                  parameters:
+                    terraformOutputEnv: ${{ parameters.terraformOutputEnv }}
+    - ${{ if in(parameters.deployType, 'ReactAppEB') }}:
+      - deployment: DeployArtifacts
+        displayName: Deploy ${{ parameters.deployType }}
+        dependsOn:
+        - BuildSources
+        - Terraform
+        - PublishTFOutputs
+        condition: and(succeeded('BuildSources'), or(succeeded('Terraform'), succeeded('PublishTFOutputs')))
+        environment: $(ENVIRONMENT_NAME)
+        strategy:
+          runOnce:
+            deploy:
               steps:
               - template: ${{ parameters.deployType }}/deploy.yml
                 ${{ if ne(parameters.terraformOutputEnv, '') }}:
