added script to get caller identity

--- a/ReactAppEB/deploy.yml
+++ b/ReactAppEB/deploy.yml
@@ -35,6 +35,7 @@ steps:
     awsCredentials: $(AWS_SERVICE_CONNECTOR)
     regionName: $(AWS_REGION)
     scriptType: inline
+    inlineScript: 'aws sts get-caller-identity'
     inlineScript: 'aws s3 sync . s3://${S3_BUCKET_NAME} --delete --acl public-read'
     disableAutoCwd: true
     workingDirectory: $(Pipeline.Workspace)
